--- a/films.html
+++ b/films.html
@@ -30,10 +30,10 @@
                         </button>
                         <div class="collapse navbar-collapse" id="main-navbar">
                             <ul class="navbar-nav ml-auto">
-                                <li class="nav-item active">
+                                <li class="nav-item">
                                     <a class="nav-link" href="#">Գլխավոր <span class="sr-only">(current)</span></a>
                                 </li>
-                                <li class="nav-item">
+                                <li class="nav-item active">
                                     <a class="nav-link" href="#">ֆիլմեր</a>
                                 </li>
                                 <li class="nav-item">
@@ -55,7 +55,81 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-9 col-12">
-                        
+                        <h2>ֆիլմեր</h2>
+                        <hr>
+                        <div class="card mb-3">
+                            <div class="row no-gutters">
+                                <div class="col-md-4">
+                                    <img class="w-100" src="assets/img/badboys.jpg" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Bad Boys</h5>
+                                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed nisl sit amet felis ullamcorper iaculis. Nam quam mi, aliquet vitae feugiat a, mattis eget sapien. Proin venenatis metus at dolor luctus tincidunt. Aenean at erat eget augue accumsan tempor vitae quis justo. Duis fermentum ex sed egestas porta. Nullam et laoreet felis.</p>
+                                        <a href="#" class="btn btn-primary">Ավելին</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card mb-3">
+                            <div class="row no-gutters">
+                                <div class="col-md-4">
+                                    <img class="w-100" src="assets/img/joker.jpg" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Joker</h5>
+                                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed nisl sit amet felis ullamcorper iaculis. Nam quam mi, aliquet vitae feugiat a, mattis eget sapien. Proin venenatis metus at dolor luctus tincidunt. Aenean at erat eget augue accumsan tempor vitae quis justo. Duis fermentum ex sed egestas porta. Nullam et laoreet felis.</p>
+                                        <a href="#" class="btn btn-primary">Ավելին</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card mb-3">
+                            <div class="row no-gutters">
+                                <div class="col-md-4">
+                                    <img class="w-100" src="assets/img/jumanji.jpg" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Jumanji</h5>
+                                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed nisl sit amet felis ullamcorper iaculis. Nam quam mi, aliquet vitae feugiat a, mattis eget sapien. Proin venenatis metus at dolor luctus tincidunt. Aenean at erat eget augue accumsan tempor vitae quis justo. Duis fermentum ex sed egestas porta. Nullam et laoreet felis.</p>
+                                        <a href="#" class="btn btn-primary">Ավելին</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card mb-3">
+                            <div class="row no-gutters">
+                                <div class="col-md-4">
+                                    <img class="w-100" src="assets/img/sonic.jpg" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Sonic</h5>
+                                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed nisl sit amet felis ullamcorper iaculis. Nam quam mi, aliquet vitae feugiat a, mattis eget sapien. Proin venenatis metus at dolor luctus tincidunt. Aenean at erat eget augue accumsan tempor vitae quis justo. Duis fermentum ex sed egestas porta. Nullam et laoreet felis.</p>
+                                        <a href="#" class="btn btn-primary">Ավելին</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <nav aria-label="Page navigation example">
+                            <ul class="pagination">
+                                <li class="page-item disabled">
+                                    <a class="page-link" href="#" aria-label="Previous">
+                                        <span aria-hidden="true">&laquo;</span>
+                                    </a>
+                                </li>
+                                <li class="page-item active"><a class="page-link" href="#">1</a></li>
+                                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                                <li class="page-item">
+                                    <a class="page-link" href="#" aria-label="Next">
+                                        <span aria-hidden="true">&raquo;</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </nav>
                     </div>
                     <div class="col-12 col-md-3">
                         <div class="card margin-top-55">
@@ -128,7 +202,7 @@
         </div>
         <footer>
             <div class="container">
-                <p><a href="https://it-lezoo.com">IT lezoo</a></p>
+                <p> Սիրով ` <a href="https://it-lezoo.com">IT lezoo</a></p>
             </div>
         </footer>
         
