--- a/films.html
+++ b/films.html
@@ -31,13 +31,13 @@
                         <div class="collapse navbar-collapse" id="main-navbar">
                             <ul class="navbar-nav ml-auto">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Գլխավոր <span class="sr-only">(current)</span></a>
+                                    <a class="nav-link" href="index.html">Գլխավոր <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item active">
                                     <a class="nav-link" href="#">ֆիլմեր</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Սերիալներ</a>
+                                    <a class="nav-link" href="serials.html">Սերիալներ</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#">Վարկանիշ</a>
