--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
                                     <a class="nav-link" href="#">Գլխավոր <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">ֆիլմեր</a>
+                                    <a class="nav-link" href="films.html">ֆիլմեր</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Սերիալներ</a>
+                                    <a class="nav-link" href="serials.html">Սերիալներ</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#">Վարկանիշ</a>
