--- a/serials.html
+++ b/serials.html
@@ -31,10 +31,10 @@
                         <div class="collapse navbar-collapse" id="main-navbar">
                             <ul class="navbar-nav ml-auto">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Գլխավոր <span class="sr-only">(current)</span></a>
+                                    <a class="nav-link" href="index.html">Գլխավոր <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">ֆիլմեր</a>
+                                    <a class="nav-link" href="films.html">ֆիլմեր</a>
                                 </li>
                                 <li class="nav-item active">
                                     <a class="nav-link" href="#">Սերիալներ</a>
