added Varkanish File

--- a/serials.html
+++ b/serials.html
@@ -40,7 +40,7 @@
                                     <a class="nav-link" href="#">Սերիալներ</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Վարկանիշ</a>
+                                    <a class="nav-link" href="varkanish.html">Վարկանիշ</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#">Կապ մեզ հետ</a>
