--- a/varkanish.html
+++ b/varkanish.html
@@ -33,14 +33,14 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="index.html">Գլխավոր <span class="sr-only">(current)</span></a>
                                 </li>
-                                <li class="nav-item active">
-                                    <a class="nav-link" href="#">ֆիլմեր</a>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="films.html">ֆիլմեր</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="serials.html">Սերիալներ</a>
                                 </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="varkanish.html">Վարկանիշ</a>
+                                <li class="nav-item active">
+                                    <a class="nav-link" href="#">Վարկանիշ</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#">Կապ մեզ հետ</a>
@@ -55,81 +55,72 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-9 col-12">
-                        <h2>ֆիլմեր</h2>
+                        <h2>ֆիլմերի վարկանիշ</h2>
                         <hr>
-                        <div class="card mb-3">
-                            <div class="row no-gutters">
-                                <div class="col-md-4">
-                                    <img class="w-100" src="assets/img/badboys.jpg" alt="...">
-                                </div>
-                                <div class="col-md-8">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Bad Boys</h5>
-                                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed nisl sit amet felis ullamcorper iaculis. Nam quam mi, aliquet vitae feugiat a, mattis eget sapien. Proin venenatis metus at dolor luctus tincidunt. Aenean at erat eget augue accumsan tempor vitae quis justo. Duis fermentum ex sed egestas porta. Nullam et laoreet felis.</p>
-                                        <a href="#" class="btn btn-primary">Ավելին</a>
-                                    </div>
-                                </div>
-                            </div>
+                        <div class="table-responsive">
+                            <table class="table table-striped">
+                                <thead>
+                                    <tr>
+                                        <th scope="col"></th>
+                                        <th scope="col">Անվանում</th>
+                                        <th scope="col">Տարեթիվ</th>
+                                        <th scope="col">Վարկանիշ</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>
+                                            <img src="assets/img/joker.jpg">
+                                        </td>
+                                        <td>Joker</td>
+                                        <td>2019</td>
+                                        <td>
+                                            <span class="badge badge-pill badge-primary">9.5</span>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <img src="assets/img/badboys.jpg">
+                                        </td>
+                                        <td>Bad Boys</td>
+                                        <td>1995</td>
+                                        <td>
+                                            <span class="badge badge-pill badge-primary">9.1</span>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <img src="assets/img/jumanji.jpg">
+                                        </td>
+                                        <td>Jumanji</td>
+                                        <td>2017</td>
+                                        <td>
+                                            <span class="badge badge-pill badge-primary">8.5</span>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <img src="assets/img/sonic.jpg">
+                                        </td>
+                                        <td>Sonic</td>
+                                        <td>2020</td>
+                                        <td>
+                                            <span class="badge badge-pill badge-primary">7</span>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <img src="assets/img/venom.jpg">
+                                        </td>
+                                        <td>Venom</td>
+                                        <td>2018</td>
+                                        <td>
+                                            <span class="badge badge-pill badge-primary">7</span>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
                         </div>
-                        <div class="card mb-3">
-                            <div class="row no-gutters">
-                                <div class="col-md-4">
-                                    <img class="w-100" src="assets/img/joker.jpg" alt="...">
-                                </div>
-                                <div class="col-md-8">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Joker</h5>
-                                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed nisl sit amet felis ullamcorper iaculis. Nam quam mi, aliquet vitae feugiat a, mattis eget sapien. Proin venenatis metus at dolor luctus tincidunt. Aenean at erat eget augue accumsan tempor vitae quis justo. Duis fermentum ex sed egestas porta. Nullam et laoreet felis.</p>
-                                        <a href="#" class="btn btn-primary">Ավելին</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card mb-3">
-                            <div class="row no-gutters">
-                                <div class="col-md-4">
-                                    <img class="w-100" src="assets/img/jumanji.jpg" alt="...">
-                                </div>
-                                <div class="col-md-8">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Jumanji</h5>
-                                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed nisl sit amet felis ullamcorper iaculis. Nam quam mi, aliquet vitae feugiat a, mattis eget sapien. Proin venenatis metus at dolor luctus tincidunt. Aenean at erat eget augue accumsan tempor vitae quis justo. Duis fermentum ex sed egestas porta. Nullam et laoreet felis.</p>
-                                        <a href="#" class="btn btn-primary">Ավելին</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card mb-3">
-                            <div class="row no-gutters">
-                                <div class="col-md-4">
-                                    <img class="w-100" src="assets/img/sonic.jpg" alt="...">
-                                </div>
-                                <div class="col-md-8">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Sonic</h5>
-                                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed nisl sit amet felis ullamcorper iaculis. Nam quam mi, aliquet vitae feugiat a, mattis eget sapien. Proin venenatis metus at dolor luctus tincidunt. Aenean at erat eget augue accumsan tempor vitae quis justo. Duis fermentum ex sed egestas porta. Nullam et laoreet felis.</p>
-                                        <a href="#" class="btn btn-primary">Ավելին</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <nav aria-label="Page navigation example">
-                            <ul class="pagination">
-                                <li class="page-item disabled">
-                                    <a class="page-link" href="#" aria-label="Previous">
-                                        <span aria-hidden="true">&laquo;</span>
-                                    </a>
-                                </li>
-                                <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                                <li class="page-item">
-                                    <a class="page-link" href="#" aria-label="Next">
-                                        <span aria-hidden="true">&raquo;</span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </nav>
                     </div>
                     <div class="col-12 col-md-3">
                         <div class="card margin-top-55">
@@ -202,7 +193,7 @@
         </div>
         <footer>
             <div class="container">
-                <p> Սիրով ` <a href="https://it-lezoo.com">IT lezoo</a></p>
+                <p><a href="https://it-lezoo.com">IT lezoo</a></p>
             </div>
         </footer>
         
