--- a/films.html
+++ b/films.html
@@ -40,7 +40,7 @@
                                     <a class="nav-link" href="serials.html">Սերիալներ</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="varkanish.html">Վարկանիշ</a>
+                                    <a class="nav-link" href="ratings.html">Վարկանիշ</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#">Կապ մեզ հետ</a>
