--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         <!-- Custom CSS -->
         <link rel="stylesheet" href="assets/css/style.css">
         <!-- Font Awesome CDN -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm" crossorigin="anonymous">
+        <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm" crossorigin="anonymous">-->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css">
         <title>IT Kino</title>
     </head>
     <body>
@@ -40,7 +41,7 @@
                                     <a class="nav-link" href="serials.html">Սերիալներ</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="varkanish.html">Վարկանիշ</a>
+                                    <a class="nav-link" href="ratings.html">Վարկանիշ</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#">Կապ մեզ հետ</a>
@@ -189,7 +190,7 @@
                                 </form>
                             </div>
                         </div>
-                        <div class="card margin-top-55" style="position: absolute; width: 90%;">
+                        <div class="card margin-top-55">
                             <div class="card-header">
                                Ֆիլմերի վարկանիշ
                             </div>
