added view.html file

--- a/ratings.html
+++ b/ratings.html
@@ -9,7 +9,8 @@
         <!-- Custom CSS -->
         <link rel="stylesheet" href="assets/css/style.css">
         <!-- Font Awesome CDN -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm" crossorigin="anonymous">
+        <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm" crossorigin="anonymous">-->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css">
         <title>IT Kino</title>
     </head>
     <body>
@@ -154,11 +155,13 @@
                                     <div class="form-group">
                                         <input type="password" class="form-control" id="password-input" placeholder="գաղտնաբառ">
                                     </div>
-                                    <button type="submit" class="btn btn-primary">Մուտք</button>
+                                    <button type="submit" class="btn btn-primary">
+                                        <i class="fa fa-sign-in" aria-hidden="true"></i>
+                                    </button>
                                 </form>
                             </div>
                         </div>
-                        <div class="card margin-top-55" style="position: absolute; width: 90%;">
+                        <div class="card margin-top-55">
                             <div class="card-header">
                                Ֆիլմերի վարկանիշ
                             </div>
