--- a/view.html
+++ b/view.html
@@ -35,7 +35,7 @@
                                     <a class="nav-link" href="index.html">Գլխավոր <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="#">ֆիլմեր</a>
+                                    <a class="nav-link" href="films.html">ֆիլմեր</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="serials.html">Սերիալներ</a>
@@ -56,81 +56,43 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-9 col-12">
-                        <h2>ֆիլմեր</h2>
-                        <hr>
-                        <div class="card mb-3">
-                            <div class="row no-gutters">
-                                <div class="col-md-4">
-                                    <img class="w-100" src="assets/img/badboys.jpg" alt="...">
-                                </div>
-                                <div class="col-md-8">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Bad Boys</h5>
-                                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed nisl sit amet felis ullamcorper iaculis. Nam quam mi, aliquet vitae feugiat a, mattis eget sapien. Proin venenatis metus at dolor luctus tincidunt. Aenean at erat eget augue accumsan tempor vitae quis justo. Duis fermentum ex sed egestas porta. Nullam et laoreet felis.</p>
-                                        <a href="view.html" class="btn btn-primary">Ավելին</a>
+                        <div class="mt-5"></div>
+                        <h1>Bad Boys</h1>
+                        <div class="embed-responsive embed-responsive-21by9">
+                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/jKCj3XuPG8M?si=T5TW3eggqN38kVn2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        </div>
+                        <div class="mt-5"></div>
+                        <h2 >Ֆիլմի մասին</h2>
+                        <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quis diam et diam sollicitudin rutrum. Vivamus id ullamcorper nisi. Aliquam pretium lorem eu est accumsan, ac porta lectus consequat. Maecenas lacus est, porta vel nisl in, tempus mattis nunc. Cras placerat lorem nec dolor fringilla accumsan. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque ex lorem, congue at blandit nec, vestibulum at tortor. Proin sem mauris, pulvinar vel nulla vitae, molestie imperdiet ipsum. Integer malesuada mollis enim at laoreet. Sed sit amet porttitor velit, nec rhoncus nulla. Mauris vulputate convallis turpis nec consectetur</p>
+                        <div class="mt-5"></div>
+                        <h2>Կարծիքներ</h2>
+                        <div class="comments">
+                            <div class="media">
+                                <img src="..." class="mr-3" alt="...">
+                                <div class="media-body">
+                                    <p>Standing on the frontline when the bombs start to fall. Heaven is jealous of our love, angels are crying from up above. Can't replace you with a million rings. Boy, when you're with me I'll give you a taste. There’s no going back. Before you met me I was alright but things were kinda heavy. Heavy is the head that wears the crown.</p>
+                                    <div class="media mt-3">
+                                        <a class="mr-3" href="#">
+                                            <img src="..." alt="...">
+                                        </a>
+                                        <div class="media-body">
+                                            <p>Greetings loved ones let's take a journey. Yes, we make angels cry, raining down on earth from up above. Give you something good to celebrate. I used to bite my tongue and hold my breath. I'm ma get your heart racing in my skin-tight jeans. As I march alone to a different beat. Summer after high school when we first met. You're so hypnotizing, could you be the devil? Could you be an angel? It's time to bring out the big balloons. Thought that I was the exception. Bikinis, zucchinis, Martinis, no weenies.</p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
+                            <div class="mt-4"></div>
+                            <form>
+                                <div class="form-group">
+                                    <input name="first-name" placeholder="Ձեր անունը" class="form-control" type="text">
+                                </div>
+                                <div class="form-group">
+                                    <textarea name="comment" class="form-control" rows="3"></textarea>
+                                </div>
+                                <button type="submit" class="btn btn-primary">Հաստատել</button>
+                            </form>
                         </div>
-                        <div class="card mb-3">
-                            <div class="row no-gutters">
-                                <div class="col-md-4">
-                                    <img class="w-100" src="assets/img/joker.jpg" alt="...">
-                                </div>
-                                <div class="col-md-8">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Joker</h5>
-                                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed nisl sit amet felis ullamcorper iaculis. Nam quam mi, aliquet vitae feugiat a, mattis eget sapien. Proin venenatis metus at dolor luctus tincidunt. Aenean at erat eget augue accumsan tempor vitae quis justo. Duis fermentum ex sed egestas porta. Nullam et laoreet felis.</p>
-                                        <a href="#" class="btn btn-primary">Ավելին</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card mb-3">
-                            <div class="row no-gutters">
-                                <div class="col-md-4">
-                                    <img class="w-100" src="assets/img/jumanji.jpg" alt="...">
-                                </div>
-                                <div class="col-md-8">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Jumanji</h5>
-                                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed nisl sit amet felis ullamcorper iaculis. Nam quam mi, aliquet vitae feugiat a, mattis eget sapien. Proin venenatis metus at dolor luctus tincidunt. Aenean at erat eget augue accumsan tempor vitae quis justo. Duis fermentum ex sed egestas porta. Nullam et laoreet felis.</p>
-                                        <a href="#" class="btn btn-primary">Ավելին</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card mb-3">
-                            <div class="row no-gutters">
-                                <div class="col-md-4">
-                                    <img class="w-100" src="assets/img/sonic.jpg" alt="...">
-                                </div>
-                                <div class="col-md-8">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Sonic</h5>
-                                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed nisl sit amet felis ullamcorper iaculis. Nam quam mi, aliquet vitae feugiat a, mattis eget sapien. Proin venenatis metus at dolor luctus tincidunt. Aenean at erat eget augue accumsan tempor vitae quis justo. Duis fermentum ex sed egestas porta. Nullam et laoreet felis.</p>
-                                        <a href="#" class="btn btn-primary">Ավելին</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <nav aria-label="Page navigation example">
-                            <ul class="pagination">
-                                <li class="page-item disabled">
-                                    <a class="page-link" href="#" aria-label="Previous">
-                                        <span aria-hidden="true">&laquo;</span>
-                                    </a>
-                                </li>
-                                <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                                <li class="page-item">
-                                    <a class="page-link" href="#" aria-label="Next">
-                                        <span aria-hidden="true">&raquo;</span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </nav>
+                        <div class="mb-5"></div>
                     </div>
                     <div class="col-12 col-md-3">
                         <div class="card margin-top-55">
@@ -205,7 +167,7 @@
         </div>
         <footer>
             <div class="container">
-                <p> Սիրով ` <a href="https://it-lezoo.com">IT lezoo</a></p>
+                <p><a href="https://it-lezoo.com">IT lezoo</a></p>
             </div>
         </footer>
         
