--- a/contacts.html
+++ b/contacts.html
@@ -69,7 +69,7 @@
                                 <input type="email" name="email" class="form-control" id="email" required>
                             </div>
                             <div class="form-group">
-                                <label for="message">Կապ մեզ հետ</label>
+                                <label for="message">Ձեր հաղորդագրությունը</label>
                                 <textarea name="message" class="form-control" rows="3" id="message" required></textarea>
                             </div>
                             <div class="form-group">
