--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                             </div>
                         </div>
                         <div class="news mt-5">
-                            <h2>Joker" ֆիլմի նկարահանումները</h2>
+                            <h2>"Joker" ֆիլմի նկարահանումները</h2>
                             <hr>
                             <div class="card film-groups mb-3">
                                 <div class="row no-gutters">
